Fix text align desktop schema competences

--- a/src/style/05-objects/_objects.pages.scss
+++ b/src/style/05-objects/_objects.pages.scss
@@ -202,9 +202,12 @@ article.schemaCompetences {
 
         .twocolumns {
             margin-top: 0;
-            text-align: left;
             margin-right: 3rem;
             max-width: 50%;
+        }
+
+        h2, p {
+            text-align: left !important;
         }
 
         svg {
